# HD-AI-Challenge

./: .gitignore  EDA.ipynb  README.md  autogluon.ipynb  autogluon.py  autogluon_for_n.ipynb  autogluon_for_nn.ipynb  autogluon_for_remain.py  autogluon_for_remove.ipynb  autogluon_result.ipynb  baseline.ipynb  csvtoparquet.py  fill_test_na.ipynb  fill_train_na.ipynb  main.py  model_retry.ipynb  pycaret.ipynb  pyproject.toml  pytorch_tabular.ipynb  xgboost.ipynb  xgboost_for_BN.ipynb  xgboost_for_temperature.ipynb  xgboost_for_uwind.ipynb  xgboost_for_vwind.ipynb
CHJ/EDA/: EDA_3_NullCheck.ipynb  EDA_4_CL_HourDistribution.ipynb  EDA_4_Country_Same.ipynb  EDA_5_날짜에 따른 CI_HOUR 분포.ipynb  EDA_6.ipynb  practice.ipynb
CHJ/TabNet/: practice.ipynb
CHJ/feature_extract/: v0.ipynb  v1.ipynb
CHJ/pytorch_tabular/: pytorch_tabular.ipynb
EDA/: EDA_1.ipynb  EDA_3.ipynb  EDA_4.ipynb  EDA_5.ipynb  EDA_6.ipynb  EDA_7.ipynb  README.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
feature_extract/: v0.ipynb  v1.ipynb  v2.ipynb  v2_BN.ipynb  v2_temp.ipynb  v2_wind.ipynb
module/: dataset.py  model.py  predictor.py  trainer.py
