[tool.poetry]
name = "hd-challenge"
version = "0.1.0"
description = ""
authors = ["sihyeong671 <bshlab671@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
ipykernel = "^6.25.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"
xgboost = "^2.0.0"
catboost = "^1.2.2"
optuna = "^3.3.0"
pyarrow = "^13.0.0"
lightgbm = "^4.1.0"
statsmodels = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
